--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/pmdartus/cj-parser",
   "dependencies": {
     "async": "^0.9.0",
+    "cheerio": "^0.17.0",
     "request": "^2.44.0"
   }
 }
