--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "cheerio": "^0.17.0",
+    "mongoose": "^3.8.17",
     "request": "^2.44.0"
   }
 }
