--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Parse CJ informations",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "NODE_ENV=test mocha"
   },
   "repository": {
     "type": "git",
@@ -17,9 +17,15 @@
   },
   "homepage": "https://github.com/pmdartus/cj-parser",
   "dependencies": {
-    "async": "^0.9.0",
-    "cheerio": "^0.17.0",
-    "mongoose": "^3.8.17",
-    "request": "^2.44.0"
+    "async": "0.9.0",
+    "cheerio": "0.17.0",
+    "kue": "0.8.9",
+    "mongoose": "3.8.17",
+    "request": "2.44.0"
+  },
+  "devDependencies": {
+    "mocha": "1.18.x",
+    "should": "4.0.x",
+    "nock": "0.48.x"
   }
 }
