--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "~3.1.1",
     "kue": "0.8.9",
     "mongoose": "3.8.17",
+    "lodash": "2.4.1",
     "request": "2.44.0"
   },
   "devDependencies": {
