--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "should": "4.0.x",
     "nock": "0.48.x",
     "mock-kue": "0.0.8",
-    "supertest": "0.14.0"
+    "supertest": "0.14.0",
+    "mocha-mongoose": "1.0.1"
   }
 }
