--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "cj-parser",
+  "name": "Affiliate-parser",
   "version": "1.0.0",
-  "description": "Parse CJ informations",
+  "description": "Parse Affiliate informations",
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test mocha"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/pmdartus/cj-parser.git"
+    "url": "https://github.com/pmdartus/Affiliate-parser.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/pmdartus/cj-parser/issues"
+    "url": "https://github.com/pmdartus/Affiliate-parser/issues"
   },
-  "homepage": "https://github.com/pmdartus/cj-parser",
+  "homepage": "https://github.com/pmdartus/Affiliate-parser",
   "dependencies": {
     "async": "0.9.0",
     "cheerio": "0.17.0",
     "express": "~3.1.1",
+    "jade": "*",
     "kue": "0.8.9",
     "mongoose": "3.8.17",
     "lodash": "2.4.1",
